Fixing spacing issues in scss files.

--- a/src/assets/styles/components/reportscommon.scss
+++ b/src/assets/styles/components/reportscommon.scss
@@ -2,17 +2,17 @@
 @import '../abstracts/_mixins.scss';
 
 .subreport {
-   width: 90%;
-   margin: 10vh auto;
-   background: $card-bg-color;
-   color: $text-color;
-   display: flex;
-   flex-direction: column;
-   border-radius: 5px;
-   @include box-shadow($card-boxshadow-color, $card-boxshadow-size);
-   @media screen and (min-width: $screen-lg-min) {
-     width: 80%;
-   }
+  width: 90%;
+  margin: 10vh auto;
+  background: $card-bg-color;
+  color: $text-color;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  @include box-shadow($card-boxshadow-color, $card-boxshadow-size);
+  @media screen and (min-width: $screen-lg-min) {
+    width: 80%;
+  }
 }
 
 .subreport-title {
@@ -21,8 +21,8 @@
 }
 
 .subreport-title-text {
-   border-bottom: 1px solid #151515;
-   padding-left: 3vh;
+  border-bottom: 1px solid #151515;
+  padding-left: 3vh;
 }
 
 .subreport-content {
@@ -41,16 +41,16 @@
 }
 
 .report-raw {
-    grid-column: 1 / -1;
-    align-self: start;
-    white-space: pre-wrap;
-    white-space: -moz-pre-wrap;
-    white-space: -pre-wrap;
-    white-space: -o-pre-wrap;
-    word-wrap: break-word;
-    padding: 1em;
-    background: #eff0f1;
-    border-radius: 3px;
+  grid-column: 1 / -1;
+  align-self: start;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  padding: 1em;
+  background: #eff0f1;
+  border-radius: 3px;
 }
 
 .report-item-above {
@@ -159,7 +159,7 @@
   width: 50%;
   grid-template-areas: 
     'icon icon'
-    'text tooltip'
+    'text tooltip';
 }
 
 .report-item-icon-big {
@@ -195,9 +195,9 @@
 }
 
 .report-controls {
-   display: flex;
-   flex-direction: row;
-   flex-basis: 40%;
+  display: flex;
+  flex-direction: row;
+  flex-basis: 40%;
 }
 
 .report-table {
@@ -232,16 +232,16 @@
         font-weight: 450;
       }
     }
-    
+
     tbody {
       tr > * {
         padding: 8px 20px;
       }
     }
   }
- }
+}
 
-.report-button {
+ .report-button {
    flex: 1;
    background: black;
    color: white;
@@ -252,36 +252,36 @@
    font-size: 3vh;
    font-weight: bold;
    margin: 0.1vh 0vh;
-}
+ }
 
-.report-button:hover {
+ .report-button:hover {
    box-shadow: 0px 5px $facebook, 0px 10px $spotify, 0px 15px $tinder-static;
    background: white;
    color: black;
-}
+ }
 
-// **************
-// graph css
-// **************
-.graph-wrapper {
-  max-width: 100%;
-  height: 100%;
-  display:flex;
-  flex-direction: column;
-}
+ // **************
+ // graph css
+ // **************
+ .graph-wrapper {
+   max-width: 100%;
+   height: 100%;
+   display:flex;
+   flex-direction: column;
+ }
 
-.graph-title {
-  font-size: 15px;
-  text-align: center;
-}
+ .graph-title {
+   font-size: 15px;
+   text-align: center;
+ }
 
-.graph-conclusion {
-  font-size: 14px;
-  text-align: center;
-  font-weight: 450;
-}
+ .graph-conclusion {
+   font-size: 14px;
+   text-align: center;
+   font-weight: 450;
+ }
 
-.heatmap-graph {
-  overflow-x: auto;
-  overflow-y: hidden;
-}
+ .heatmap-graph {
+   overflow-x: auto;
+   overflow-y: hidden;
+ }
